--- a/.github/workflows/hakrawler.yml
+++ b/.github/workflows/hakrawler.yml
@@ -42,6 +42,7 @@ jobs:
             production.cloudflare.docker.com:443
             proxy.golang.org:443
             registry-1.docker.io:443
+            sum.golang.org:443
           
       - name: Source checkout
         uses: actions/checkout@8f4b7f84864484a7bf31766abe9204da3cbe65b3 # v2.4.0 
