--- a/.github/workflows/vegeta.yml
+++ b/.github/workflows/vegeta.yml
@@ -43,6 +43,7 @@ jobs:
             proxy.golang.org:443
             registry-1.docker.io:443
             storage.googleapis.com:443
+            sum.golang.org:443
           
       - name: Source checkout
         uses: actions/checkout@8f4b7f84864484a7bf31766abe9204da3cbe65b3 # v2.4.0 
