--- a/.github/workflows/scan.yml
+++ b/.github/workflows/scan.yml
@@ -89,45 +89,45 @@ jobs:
         with:
           sarif_file: ${{ steps.anchore-scan.outputs.sarif }}
 
-  snyk:
-    permissions:
-      contents: read # for actions/checkout to fetch code
-      security-events: write # for github/codeql-action/upload-sarif to upload SARIF results
-    needs: anchore
-    strategy:
-      max-parallel: 10
-      fail-fast: false
-      matrix:
-        #image: [cloudflared]
-        image: [age, ali, amass, ansible, aznamingtool, bl3auto, black, catprinter, cf-warp, cloudflared, coredns, ddosify, dhcp-helper, dive, dkimpy, dnscontrol, dnscrypt-proxy, dnsx, docker-autocompose, docker-bench-security, driftctl, dry, dsq, excalidraw, fq, gobgp, gocannon, goplay2, goreplay, gotip, gron, hakrawler, headscale, httpie-go, httprobe, httpx, imapsync, lego, log4j-scan, logmepwn, lpar2rrd, miller, nebula, netmaker, nginx, nginx-quic, ntfy, octosql, onetun, prettier, pwru, rclone, rdap, rustybgp, sftpd, spicedb, ssh-audit, sslyze, stor2rrd, subfinder, tailscale, terraform, testssl.sh, textql, tftpd, toxiproxy, trufflehog, unbound, vegeta, visidata, watchtower, whois, wuzz, yggdrasil-go, yt-dlp, zola]
-    runs-on: ubuntu-22.04
+  # snyk:
+  #   permissions:
+  #     contents: read # for actions/checkout to fetch code
+  #     security-events: write # for github/codeql-action/upload-sarif to upload SARIF results
+  #   needs: anchore
+  #   strategy:
+  #     max-parallel: 10
+  #     fail-fast: false
+  #     matrix:
+  #       #image: [cloudflared]
+  #       image: [age, ali, amass, ansible, aznamingtool, bl3auto, black, catprinter, cf-warp, cloudflared, coredns, ddosify, dhcp-helper, dive, dkimpy, dnscontrol, dnscrypt-proxy, dnsx, docker-autocompose, docker-bench-security, driftctl, dry, dsq, excalidraw, fq, gobgp, gocannon, goplay2, goreplay, gotip, gron, hakrawler, headscale, httpie-go, httprobe, httpx, imapsync, lego, log4j-scan, logmepwn, lpar2rrd, miller, nebula, netmaker, nginx, nginx-quic, ntfy, octosql, onetun, prettier, pwru, rclone, rdap, rustybgp, sftpd, spicedb, ssh-audit, sslyze, stor2rrd, subfinder, tailscale, terraform, testssl.sh, textql, tftpd, toxiproxy, trufflehog, unbound, vegeta, visidata, watchtower, whois, wuzz, yggdrasil-go, yt-dlp, zola]
+  #   runs-on: ubuntu-22.04
 
-    steps:
-      - name: Harden Runner
-        uses: step-security/harden-runner@03bee3930647ebbf994244c21ddbc0d4933aab4f # v2.3.0
-        with:
-          egress-policy: audit
+  #   steps:
+  #     - name: Harden Runner
+  #       uses: step-security/harden-runner@03bee3930647ebbf994244c21ddbc0d4933aab4f # v2.3.0
+  #       with:
+  #         egress-policy: audit
           
-      - name: Checkout code
-        uses: actions/checkout@8f4b7f84864484a7bf31766abe9204da3cbe65b3 # v2.4.0
+  #     - name: Checkout code
+  #       uses: actions/checkout@8f4b7f84864484a7bf31766abe9204da3cbe65b3 # v2.4.0
 
-      - name: Run Snyk to check ${{ matrix.image }} Docker image for vulnerabilities
-        # Snyk can be used to break the build when it detects vulnerabilities.
-        # In this case we want to upload the issues to GitHub Code Scanning
-        continue-on-error: true
-        uses: snyk/actions/docker@7fad562681122205233d1242c3bb39598c5393da # master
-        env:
-          # In order to use the Snyk Action you will need to have a Snyk API token.
-          # More details in https://github.com/snyk/actions#getting-your-snyk-token
-          # or you can signup for free at https://snyk.io/login
-          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-        with:
-          #image: 'docker.io/${{ github.actor }}/${{ matrix.image }}:latest'
-          image: 'ghcr.io/${{ github.actor }}/${{ matrix.image }}:latest'
-          args: --file=${{ matrix.image }}/Dockerfile --severity-threshold=high
+  #     - name: Run Snyk to check ${{ matrix.image }} Docker image for vulnerabilities
+  #       # Snyk can be used to break the build when it detects vulnerabilities.
+  #       # In this case we want to upload the issues to GitHub Code Scanning
+  #       continue-on-error: true
+  #       uses: snyk/actions/docker@7fad562681122205233d1242c3bb39598c5393da # master
+  #       env:
+  #         # In order to use the Snyk Action you will need to have a Snyk API token.
+  #         # More details in https://github.com/snyk/actions#getting-your-snyk-token
+  #         # or you can signup for free at https://snyk.io/login
+  #         SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+  #       with:
+  #         #image: 'docker.io/${{ github.actor }}/${{ matrix.image }}:latest'
+  #         image: 'ghcr.io/${{ github.actor }}/${{ matrix.image }}:latest'
+  #         args: --file=${{ matrix.image }}/Dockerfile --severity-threshold=high
 
-      - name: Upload result to GitHub Code Scanning
-        uses: github/codeql-action/upload-sarif@d186a2a36cc67bfa1b860e6170d37fb9634742c7
-        with:
-          sarif_file: snyk.sarif
+  #     - name: Upload result to GitHub Code Scanning
+  #       uses: github/codeql-action/upload-sarif@d186a2a36cc67bfa1b860e6170d37fb9634742c7
+  #       with:
+  #         sarif_file: snyk.sarif
 
