Remove mode=max
Signed-off-by: Jauder Ho <jauderho@users.noreply.github.com>

--- a/.github/workflows/age.yml
+++ b/.github/workflows/age.yml
@@ -111,7 +111,7 @@ jobs:
           sbom: true
           provenance: true
           cache-from: type=gha, scope=${{ github.workflow }}
-          cache-to: type=gha, scope=${{ github.workflow }}, mode=max
+          cache-to: type=gha, scope=${{ github.workflow }}
           labels: ${{ steps.docker_meta.outputs.labels }}
           tags: |
             docker.io/${{ env.REPOSITORY }}:${{ env.BUILD_VERSION }}
