--- a/.github/workflows/nginx.yml
+++ b/.github/workflows/nginx.yml
@@ -105,7 +105,7 @@ jobs:
             OPENSSL_VERSION
             PCRE_VERSION
           cache-from: type=gha, scope=${{ github.workflow }}
-          cache-to: type=gha, scope=${{ github.workflow }}, mode=max
+          cache-to: type=gha, scope=${{ github.workflow }}
           labels: ${{ steps.docker_meta.outputs.labels }}
           tags: |
             docker.io/${{ env.REPOSITORY }}:${{ env.BUILD_VERSION }}
