--- a/.github/workflows/ansible.yml
+++ b/.github/workflows/ansible.yml
@@ -103,7 +103,7 @@ jobs:
           #platforms: linux/amd64,linux/arm64,linux/ppc64le
           build-args: BUILD_VERSION
           cache-from: type=gha, scope=${{ github.workflow }}-${{ matrix.distro }}
-          cache-to: type=gha, scope=${{ github.workflow }}-${{ matrix.distro }}, mode=max
+          cache-to: type=gha, scope=${{ github.workflow }}-${{ matrix.distro }}
           labels: ${{ steps.docker_meta.outputs.labels }}
           tags: |
             docker.io/${{ env.REPOSITORY }}:${{ env.BUILD_VERSION }}
@@ -126,7 +126,7 @@ jobs:
           #platforms: linux/amd64,linux/arm64,linux/ppc64le
           build-args: BUILD_VERSION
           cache-from: type=gha, scope=${{ github.workflow }}-${{ matrix.distro }}
-          cache-to: type=gha, scope=${{ github.workflow }}-${{ matrix.distro }}, mode=max
+          cache-to: type=gha, scope=${{ github.workflow }}-${{ matrix.distro }}
           labels: ${{ steps.docker_meta.outputs.labels }}
           tags: |
             docker.io/${{ env.REPOSITORY }}:${{ env.BUILD_VERSION }}-${{ matrix.distro }}
