--- a/.github/workflows/dkimpy.yml
+++ b/.github/workflows/dkimpy.yml
@@ -99,7 +99,7 @@ jobs:
           #platforms: linux/amd64
           build-args: BUILD_VERSION
           cache-from: type=gha, scope=${{ github.workflow }}-${{ matrix.distro }}
-          cache-to: type=gha, scope=${{ github.workflow }}-${{ matrix.distro }}, mode=max
+          cache-to: type=gha, scope=${{ github.workflow }}-${{ matrix.distro }}
           labels: ${{ steps.docker_meta.outputs.labels }}
           tags: |
             docker.io/${{ env.REPOSITORY }}:${{ env.BUILD_VERSION }}
@@ -121,7 +121,7 @@ jobs:
           #platforms: linux/amd64
           build-args: BUILD_VERSION
           cache-from: type=gha, scope=${{ github.workflow }}-${{ matrix.distro }}
-          cache-to: type=gha, scope=${{ github.workflow }}-${{ matrix.distro }}, mode=max
+          cache-to: type=gha, scope=${{ github.workflow }}-${{ matrix.distro }}
           labels: ${{ steps.docker_meta.outputs.labels }}
           tags: |
             docker.io/${{ env.REPOSITORY }}:${{ env.BUILD_VERSION }}-${{ matrix.distro }}
