--- a/.github/workflows/textql.yml
+++ b/.github/workflows/textql.yml
@@ -90,7 +90,7 @@ jobs:
           build-args: |
             BUILD_VERSION
           cache-from: type=gha, scope=${{ github.workflow }}
-          cache-to: type=gha, scope=${{ github.workflow }}, mode=max
+          cache-to: type=gha, scope=${{ github.workflow }}
           labels: ${{ steps.docker_meta.outputs.labels }}
           tags: |
             docker.io/${{ env.REPOSITORY }}:${{ env.BUILD_VERSION }}
