--- a/.github/workflows/zola.yml
+++ b/.github/workflows/zola.yml
@@ -88,7 +88,7 @@ jobs:
           push: ${{ github.event_name != 'pull_request' }}
           context: ${{ github.workflow }}
           #platforms: linux/amd64,linux/arm64,linux/ppc64le,linux/s390x
-          x#platforms: linux/amd64,linux/arm64
+          platforms: linux/amd64,linux/arm64
           #platforms: linux/amd64
           #platforms: linux/amd64,linux/386,linux/arm64,linux/arm/v7,linux/arm/v6,linux/ppc64le,linux/s390x
           build-args: |
