--- a/.github/workflows/yt-dlp-nightly-builds.yml
+++ b/.github/workflows/yt-dlp-nightly-builds.yml
@@ -5,7 +5,7 @@ on:
     branches: 
       - main
     paths:
-      - yt-dlp/*
+      - yt-dlp/Dockerfile.nightly
       - .github/workflows/yt-dlp-nightly-builds.yml
   workflow_dispatch:
   schedule:
@@ -84,7 +84,7 @@ jobs:
         uses: docker/build-push-action@3b5e8027fcad23fda98b2e3ac259d8d67585f671 # v2.8.0
         with:
           push: ${{ github.event_name != 'pull_request' }}
-          context: ${{ github.workflow }}
+          context: yt-dlp
           file: yt-dlp/Dockerfile.nightly
           platforms: linux/amd64,linux/386,linux/arm64,linux/arm/v7,linux/arm/v6,linux/ppc64le,linux/s390x
           #platforms: linux/amd64
