--- a/ansible/requirements.txt
+++ b/ansible/requirements.txt
@@ -25,7 +25,7 @@ mypy-extensions==1.0.0 ; python_version >= '3.5'
 packaging==23.1 ; python_version >= '3.7'
 pathspec==0.11.1 ; python_version >= '3.7'
 persist-queue==0.8.0
-platformdirs==3.3.0 ; python_version >= '3.7'
+platformdirs==3.4.0 ; python_version >= '3.7'
 pycparser==2.21
 pygments==2.15.1 ; python_version >= '3.7'
 pyrsistent==0.19.3 ; python_version >= '3.7'
@@ -33,7 +33,7 @@ pyspnego==0.8.0 ; python_version >= '3.7'
 python-dateutil==2.8.2 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 pywinrm==0.4.3
 pyyaml==6.0 ; python_version >= '3.6'
-requests==2.28.2 ; python_version >= '3.7' and python_version < '4'
+requests==2.29.0 ; python_version >= '3.7'
 requests-ntlm==1.2.0 ; python_version >= '3.7'
 resolvelib==0.8.1
 retryz==0.1.9
