--- a/.github/workflows/docker-autocompose.yml
+++ b/.github/workflows/docker-autocompose.yml
@@ -47,6 +47,7 @@ jobs:
             production.cloudflare.docker.com:443
             pypi.org:443
             registry-1.docker.io:443
+            www.piwheels.org:443
           
       - name: Source checkout
         uses: actions/checkout@8e5e7e5ab8b370d6c329ec480221332ada57f0ab # v2.4.0 
