Use the default cargo instead

--- a/rustybgp/Dockerfile
+++ b/rustybgp/Dockerfile
@@ -13,15 +13,15 @@ ARG GIT_URL=https://github.com/jauderho/rustybgp.git
 RUN test -n "${BUILD_VERSION}" \
 	&& apk update \
 	&& apk upgrade -a \
-	&& apk add --no-cache ca-certificates curl gcc protoc git musl-dev mold \
-	&& git clone ${GIT_URL} \
+	&& apk add --no-cache ca-certificates curl gcc protoc git musl-dev mold cargo \
+	&& git clone --depth 1 ${GIT_URL} \
 	&& cd /usr/src/github.com/osrg/rustybgp/rustybgp \
 	# revert and remove CPU requirement
 	&& git revert -n b61f8ac5f8caccef8b145f26c09807eb1df4472f \
 	&& git reset HEAD . \
-	&& curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y \
-	&& source $HOME/.cargo/env \
-	&& rustup component add rustfmt \
+	#&& curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y \
+	#&& source $HOME/.cargo/env \
+	#&& rustup component add rustfmt \
 	&& RUSTFLAGS="-C link-arg=-fuse-ld=mold" cargo build --release \
 	&& strip target/release/rustybgpd
 
