--- a/visidata/requirements.txt
+++ b/visidata/requirements.txt
@@ -6,9 +6,9 @@ idna==3.4 ; python_version >= '3.5'
 importlib-metadata==6.6.0 ; python_version >= '3.7'
 lxml==4.9.2
 python-dateutil==2.8.2
-requests==2.29.0
+requests==2.30.0
 six==1.16.0 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-urllib3==1.26.15 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
+urllib3==2.0.2 ; python_version >= '3.7'
 visidata==2.11
 wcwidth==0.2.6
 zipp==3.15.0 ; python_version >= '3.7'
