Fix lgomepwn cryoto
Signed-off-by: Jauder Ho <jauderho@users.noreply.github.com>

--- a/logmepwn/Dockerfile
+++ b/logmepwn/Dockerfile
@@ -17,6 +17,7 @@ RUN test -n "${BUILD_VERSION}" \
 	&& update-ca-certificates \
 	&& curl -L "${ARCHIVE_URL}${BUILD_VERSION}.tar.gz" -o /tmp/logmepwn.tar.gz \
 	&& tar xzf /tmp/logmepwn.tar.gz --strip 1 -C /go/src/github.com/0xInfection/logmepwn \ 
+	&& go get -u golang.org/x/crypto \ 
 	&& go build -o lmp -v -trimpath -buildmode=pie -ldflags="-s -w" .
 
 # Validation check
