--- a/.github/workflows/age.yml
+++ b/.github/workflows/age.yml
@@ -29,33 +29,19 @@ jobs:
       - name: Harden Runner
         uses: step-security/harden-runner@128a63446a954579617e875aaab7d2978154e969
         with:
-          egress-policy: audit
-          disable-telemetry: false
+          disable-sudo: true
+          egress-policy: block
+          disable-telemetry: true
           allowed-endpoints: >
-            95s5acprodeus1file6.blob.core.windows.net:443
             api.github.com:443
-            artifactcache.actions.githubusercontent.com:443
             auth.docker.io:443
-            codeload.github.com:443
             dl-cdn.alpinelinux.org:443
-            fulcio.sigstore.dev:443
             ghcr.io:443
             github.com:443
             index.docker.io:443
-            oauth2.sigstore.dev:443
-            objects.githubusercontent.com:443
-            pipelines.actions.githubusercontent.com:443
-            pkg-containers.githubusercontent.com:443
             production.cloudflare.docker.com:443
             proxy.golang.org:443
-            raw.githubusercontent.com:443
             registry-1.docker.io:443
-            rekor.sigstore.dev:443
-            sigstore-tuf-root.storage.googleapis.com:443
-            storage.googleapis.com:443
-            sum.golang.org:443
-            toolbox-data.anchore.io:443
-            v1.fulcio.sigstore.dev:443
 
       - name: Source checkout
         uses: actions/checkout@8e5e7e5ab8b370d6c329ec480221332ada57f0ab # v2.4.0 
