--- a/.github/workflows/scan.yml
+++ b/.github/workflows/scan.yml
@@ -34,6 +34,7 @@ jobs:
         uses: step-security/harden-runner@128a63446a954579617e875aaab7d2978154e969 # v2.4.0
         with:
           egress-policy: audit
+          disable-telemetry: false
           
       - name: Checkout code
         uses: actions/checkout@8e5e7e5ab8b370d6c329ec480221332ada57f0ab # v2.4.0
@@ -71,6 +72,7 @@ jobs:
         uses: step-security/harden-runner@128a63446a954579617e875aaab7d2978154e969 # v2.4.0
         with:
           egress-policy: audit
+          disable-telemetry: false
           
       - name: Checkout code
         uses: actions/checkout@8e5e7e5ab8b370d6c329ec480221332ada57f0ab # v2.4.0
@@ -107,6 +109,7 @@ jobs:
   #       uses: step-security/harden-runner@128a63446a954579617e875aaab7d2978154e969 # v2.4.0
   #       with:
   #         egress-policy: audit
+  #         disable-telemetry: false
           
   #     - name: Checkout code
   #       uses: actions/checkout@8e5e7e5ab8b370d6c329ec480221332ada57f0ab # v2.4.0
