Update mitogen source for ansible
Signed-off-by: Jauder Ho <jauderho@users.noreply.github.com>

--- a/ansible/Pipfile
+++ b/ansible/Pipfile
@@ -18,7 +18,8 @@ pywinrm = "*"
 #requests-kerberos = "*"
 storops = "*"
 wheel = "*"
-mitogen = { git = "https://github.com/mitogen-hq/mitogen.git", editable = true, ref = "660d3e088501816edc12f4b98e9e92a35f68c707" }
+mitogen = { git = "https://github.com/jauderho/mitogen.git", editable = true }
+#mitogen = { git = "https://github.com/mitogen-hq/mitogen.git", editable = true, ref = "660d3e088501816edc12f4b98e9e92a35f68c707" }
 
 [dev-packages]
 
