--- a/dnscontrol/Dockerfile
+++ b/dnscontrol/Dockerfile
@@ -16,7 +16,7 @@ RUN test -n "${BUILD_VERSION}" \
 	&& update-ca-certificates \
 	&& curl -L "${ARCHIVE_URL}${BUILD_VERSION}.tar.gz" -o /tmp/dnscontrol.tar.gz \
 	&& tar xzf /tmp/dnscontrol.tar.gz --strip 1 -C /go/src/github.com/StackExchange/dnscontrol \
-	&& go build -v -trimpath -buildmode=pie -ldflags="-linkmode=internal -s -w -X main.Version=${BUILD_VERSION}"
+	&& go build -v -trimpath -buildmode=pie -ldflags="-s -w -X main.Version=${BUILD_VERSION}"
 
 # Validation check
 RUN cp dnscontrol /go/bin/dnscontrol
