Test golang.org/x/net fix
Signed-off-by: Jauder Ho <jauderho@users.noreply.github.com>

--- a/dnscrypt-proxy/Dockerfile
+++ b/dnscrypt-proxy/Dockerfile
@@ -15,6 +15,7 @@ RUN test -n "${BUILD_VERSION}" \
 	&& update-ca-certificates \
 	&& curl -L "${ARCHIVE_URL}${BUILD_VERSION}.tar.gz" -o /tmp/dnscrypt-proxy.tar.gz \
 	&& tar xzf /tmp/dnscrypt-proxy.tar.gz --strip 1 -C /go/src/github.com/DNSCrypt \
+	&& go get -u golang.org/x/net \
 	&& go build -v -trimpath -ldflags="-s -w"
 
 WORKDIR /config
