Update golang.org/x/crypto for httpie-go

--- a/httpie-go/Dockerfile
+++ b/httpie-go/Dockerfile
@@ -14,6 +14,7 @@ RUN test -n "${BUILD_VERSION}" \
 	&& apk add --no-cache git gcc musl-dev \ 
 	&& git clone --depth 1 ${GIT_URL} --branch ${BUILD_VERSION} /go/src/github.com/nojima/httpie-go \
 	&& cd /go/src/github.com/nojima/httpie-go \
+	&& go get -u golang.org/x/crypto
 	&& go build -v -trimpath -ldflags="-s -w" ./cmd/ht 
 
 WORKDIR /config
