--- a/ali/Dockerfile
+++ b/ali/Dockerfile
@@ -15,6 +15,7 @@ RUN test -n "${BUILD_VERSION}" \
 	&& curl -L "${ARCHIVE_URL}${BUILD_VERSION}.tar.gz" -o /tmp/ali.tar.gz \
 	&& tar xzf /tmp/ali.tar.gz --strip 1 -C /go/src/github.com/nakabonne/ali \
 	&& go get -u golang.org/x/net \
+	&& go mod tidy \
 	&& go build -v -trimpath -ldflags="-s -w -X main.version=${BUILD_VERSION}" . 
 
 WORKDIR /config
