--- a/goplay2/Dockerfile
+++ b/goplay2/Dockerfile
@@ -16,6 +16,7 @@ RUN test -n "${BUILD_VERSION}" \
 	&& git clone --depth 1 ${GIT_URL} /go/src/github.com/openairplay/goplay2 \
 	&& cd /go/src/github.com/openairplay/goplay2 \
 	&& go get -u golang.org/x/net \
+	&& go mod tidy \
 	&& go build -v -trimpath -buildmode=pie -ldflags="-s -w" . 
 
 WORKDIR /config
