--- a/.github/workflows/dnscrypt-proxy.yml
+++ b/.github/workflows/dnscrypt-proxy.yml
@@ -42,6 +42,7 @@ jobs:
             production.cloudflare.docker.com:443
             proxy.golang.org:443
             registry-1.docker.io:443
+            storage.googleapis.com:443
             sum.golang.org:443
           
       - name: Source checkout
