--- a/octosql/Dockerfile
+++ b/octosql/Dockerfile
@@ -14,7 +14,7 @@ RUN test -n "${BUILD_VERSION}" \
 	&& update-ca-certificates \
 	&& curl -L "${ARCHIVE_URL}${BUILD_VERSION}.tar.gz" -o /tmp/octosql.tar.gz \
 	&& tar xzf /tmp/octosql.tar.gz --strip 1 -C /go/src/github.com/cube2222/octosql \
-	&& go get -u golang.org/x/net \
+	&& go get -u golang.org/x/net gopkg.in/yaml.v3 \
 	&& go mod tidy \
 	&& go build -o octosql -v -trimpath -ldflags="-s -w -X github.com/cube2222/octosql/cmd.VERSION=${BUILD_VERSION}" . 
 
