--- a/.github/workflows/nginx-quic.yml
+++ b/.github/workflows/nginx-quic.yml
@@ -181,7 +181,10 @@ jobs:
           #platforms: linux/amd64,linux/arm64,linux/arm/v7,linux/ppc64le
           platforms: linux/amd64,linux/arm64
           #platforms: linux/amd64
-          build-args: BUILD_VERSION
+          build-args: |
+            BUILD_VERSION
+          sbom: true
+          provenance: true
           cache-from: type=gha, scope=${{ github.workflow }}-alpine-${{ matrix.quic }}
           cache-to: type=gha, scope=${{ github.workflow }}-alpine-${{ matrix.quic }}
           labels: ${{ steps.docker_meta.outputs.labels }}
@@ -199,7 +202,10 @@ jobs:
           #platforms: linux/amd64,linux/arm64,linux/ppc64le,linux/s390x
           platforms: linux/amd64,linux/arm64
           #platforms: linux/amd64
-          build-args: BUILD_VERSION
+          build-args: |
+            BUILD_VERSION
+          sbom: true
+          provenance: true
           cache-from: type=gha, scope=${{ github.workflow }}-alpine-${{ matrix.quic }}
           cache-to: type=gha, scope=${{ github.workflow }}-alpine-${{ matrix.quic }}
           labels: ${{ steps.docker_meta.outputs.labels }}
