--- a/.github/workflows/nginx.yml
+++ b/.github/workflows/nginx.yml
@@ -104,6 +104,8 @@ jobs:
             BUILD_VERSION
             OPENSSL_VERSION
             PCRE_VERSION
+          sbom: true
+          provenance: true
           cache-from: type=gha, scope=${{ github.workflow }}
           cache-to: type=gha, scope=${{ github.workflow }}
           labels: ${{ steps.docker_meta.outputs.labels }}
