--- a/.github/workflows/toxiproxy.yml
+++ b/.github/workflows/toxiproxy.yml
@@ -87,7 +87,10 @@ jobs:
           #platforms: linux/amd64,linux/arm64,linux/386,linux/arm/v7,linux/arm/v6
           #platforms: linux/amd64,linux/386,linux/arm64,linux/arm/v7,linux/arm/v6,linux/ppc64le,linux/s390x
           platforms: linux/amd64,linux/386,linux/arm64,linux/arm/v7,linux/arm/v6,linux/s390x
-          build-args: BUILD_VERSION
+          build-args: |
+            BUILD_VERSION
+          sbom: true
+          provenance: true
           cache-from: type=gha, scope=${{ github.workflow }}
           cache-to: type=gha, scope=${{ github.workflow }}
           labels: ${{ steps.docker_meta.outputs.labels }}
