--- a/.github/workflows/ansible.yml
+++ b/.github/workflows/ansible.yml
@@ -101,7 +101,10 @@ jobs:
           #platforms: linux/amd64,linux/arm64,linux/ppc64le,linux/arm/v7
           platforms: linux/amd64,linux/arm64
           #platforms: linux/amd64,linux/arm64,linux/ppc64le
-          build-args: BUILD_VERSION
+          build-args: |
+            BUILD_VERSION
+          sbom: true
+          provenance: true
           cache-from: type=gha, scope=${{ github.workflow }}-${{ matrix.distro }}
           cache-to: type=gha, scope=${{ github.workflow }}-${{ matrix.distro }}
           labels: ${{ steps.docker_meta.outputs.labels }}
@@ -124,7 +127,10 @@ jobs:
           platforms: linux/amd64,linux/arm64
           #platforms: linux/amd64,linux/arm64,linux/arm/v7,linux/ppc64le
           #platforms: linux/amd64,linux/arm64,linux/ppc64le
-          build-args: BUILD_VERSION
+          build-args: |
+            BUILD_VERSION
+          sbom: true
+          provenance: true
           cache-from: type=gha, scope=${{ github.workflow }}-${{ matrix.distro }}
           cache-to: type=gha, scope=${{ github.workflow }}-${{ matrix.distro }}
           labels: ${{ steps.docker_meta.outputs.labels }}
