--- a/.github/workflows/black.yml
+++ b/.github/workflows/black.yml
@@ -89,7 +89,10 @@ jobs:
           #platforms: linux/amd64,linux/arm64,linux/arm/v7,linux/arm/v6
           #platforms: linux/amd64,linux/arm64,linux/ppc64le
           platforms: linux/amd64,linux/386,linux/arm64,linux/arm/v7,linux/arm/v6,linux/ppc64le,linux/s390x
-          build-args: BUILD_VERSION
+          build-args: |
+            BUILD_VERSION
+          sbom: true
+          provenance: true
           cache-from: type=gha, scope=${{ github.workflow }}-alpine
           cache-to: type=gha, scope=${{ github.workflow }}-alpine
           labels: ${{ steps.docker_meta.outputs.labels }}
