--- a/.github/workflows/ddosify.yml
+++ b/.github/workflows/ddosify.yml
@@ -93,6 +93,8 @@ jobs:
           #platforms: linux/amd64,linux/arm64,linux/arm/v7,linux/arm/v6,linux/s390x
           build-args: |
             BUILD_VERSION
+          sbom: true
+          provenance: true
           cache-from: type=gha, scope=${{ github.workflow }}
           cache-to: type=gha, scope=${{ github.workflow }}
           labels: ${{ steps.docker_meta.outputs.labels }}
