--- a/.github/workflows/dkimpy.yml
+++ b/.github/workflows/dkimpy.yml
@@ -98,6 +98,8 @@ jobs:
           platforms: linux/amd64,linux/arm64
           #platforms: linux/amd64
           build-args: BUILD_VERSION
+          sbom: true
+          provenance: true
           cache-from: type=gha, scope=${{ github.workflow }}-${{ matrix.distro }}
           cache-to: type=gha, scope=${{ github.workflow }}-${{ matrix.distro }}
           labels: ${{ steps.docker_meta.outputs.labels }}
@@ -119,7 +121,10 @@ jobs:
           #platforms: linux/amd64,linux/arm64,linux/ppc64le,linux/arm/v7
           platforms: linux/amd64,linux/arm64
           #platforms: linux/amd64
-          build-args: BUILD_VERSION
+          build-args: |
+            BUILD_VERSION
+          sbom: true
+          provenance: true
           cache-from: type=gha, scope=${{ github.workflow }}-${{ matrix.distro }}
           cache-to: type=gha, scope=${{ github.workflow }}-${{ matrix.distro }}
           labels: ${{ steps.docker_meta.outputs.labels }}
