--- a/.github/workflows/spicedb.yml
+++ b/.github/workflows/spicedb.yml
@@ -90,6 +90,8 @@ jobs:
           #platforms: linux/amd64
           build-args: |
             BUILD_VERSION
+          sbom: true
+          provenance: true
           cache-from: type=gha, scope=${{ github.workflow }}
           cache-to: type=gha, scope=${{ github.workflow }}
           labels: ${{ steps.docker_meta.outputs.labels }}
