Match nodejs versions
Signed-off-by: Jauder Ho <jauderho@users.noreply.github.com>

--- a/cf-warp/Dockerfile
+++ b/cf-warp/Dockerfile
@@ -1,4 +1,3 @@
-#FROM node:20.2-alpine3.18@sha256:59ac6536ba03469adc3847f23a4f223b0418fba21c90168d703f61bd84125989 AS build
 FROM node:20.3-alpine3.18@sha256:f77f29bc47124b393d8e7ae947be385e851d7c448d85ab87a4c077af84ee8ea2 AS build
 
 WORKDIR /app
@@ -6,12 +5,14 @@ WORKDIR /app
 ARG BUILD_VERSION
 ARG ARCHIVE_URL=https://github.com/jauderho/cf-warp/archive/
 
+ADD "${ARCHIVE_URL}${BUILD_VERSION}.tar.gz" /tmp/cf-warp.tar.gz
+
 RUN test -n "${BUILD_VERSION}" \
 	&& apk update \
 	&& apk upgrade -a \
 	&& apk add --no-cache ca-certificates curl \
 	&& update-ca-certificates \
-	&& curl -L "${ARCHIVE_URL}${BUILD_VERSION}.tar.gz" -o /tmp/cf-warp.tar.gz \
+	#&& curl -L "${ARCHIVE_URL}${BUILD_VERSION}.tar.gz" -o /tmp/cf-warp.tar.gz \
 	&& tar xzf /tmp/cf-warp.tar.gz --strip 1 -C /app \
 	#&& yarn set version berry \
 	&& yarn install \
@@ -26,14 +27,13 @@ RUN test -n "${BUILD_VERSION}" \
 
 
 
-#FROM node:17-alpine3.15
 FROM alpine:3.18.2@sha256:82d1e9d7ed48a7523bdebc18cf6290bdb97b82302a8a9c27d4fe885949ea94d1
 
 WORKDIR /app
 
 RUN apk update \
 	&& apk upgrade -a \
-	&& apk --no-cache add --upgrade busybox ssl_client nodejs \
+	&& apk --no-cache add --upgrade busybox ssl_client nodejs-current \
 	&& rm -rf /var/cache/apk/*
 
 COPY --from=build /app .
